# Role_base_api

./: .gitignore  pyproject.toml
alembic/: env.py
app/: .env  main.py
app/api/v1/: auth.py  users.py
app/core/: config.py  database.py  security.py
app/dependencies/: auth.py
app/models/: enums.py  user.py
app/schemas/: user.py
